Pad out bouttom of content frame to prevent it from shifting when scrolling to an anchor (bug 637904)

--- a/media/css/zamboni/mobile.css
+++ b/media/css/zamboni/mobile.css
@@ -200,6 +200,7 @@ table th {
     width: 100%;
     overflow: hidden;
     position: relative;
+    padding-bottom: 16px;
 }
 
 #content > details,
